--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,5 +3,6 @@ include INSTALL.txt
 include LICENSE.txt
 include MANIFEST.in
 include README.txt
+include RELEASE-VERSION
 recursive-include docs *
 recursive-include voting/tests *
